--- a/admin/sass/_contact-form-table.scss
+++ b/admin/sass/_contact-form-table.scss
@@ -269,7 +269,13 @@
                     padding: 3px;
                     width: 100%;
 
-
+                    label {
+                        .span-alert {
+                            font-size: 16px;
+                            color: red;
+                            ;
+                        }
+                    }
 
                     select,
                     input {
